split OneCallResponse into more classes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "openweatherwrap"
-version = "1.0.0"
+version = "1.1.0"
 readme = "README.md"
 authors= [
     { name = "lythox", email= "lythox@lxio.dev" }
@@ -11,9 +11,9 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 dependencies = [
-    "requests",
-    "geopy",
-    "aiohttp"
+    "requests==2.32.3",
+    "geopy==2.4.1",
+    "aiohttp==3.12.13"
 ]
 
 license = { text = "Attribution-ShareAlike 4.0 International" }
@@ -25,3 +25,4 @@ build-backend = "flit_core.buildapi"
 [project.urls]
 Home = "https://lxio.dev"
 Repository = "https://github.com/lythoxx/openweatherwrap"
+Documentation = "https://openweatherwrap.lxio.dev"
